examples/test/testpolicy534.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy534
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key26: value2
      key28: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value45
      podSelector:
        matchLabels:
          key14: value42
          key28: value0
